finish the login

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,12 +15,15 @@ settings = development
 project = ook
 eggs = 
 	${buildout:eggs}
+	PIL
 	south
 	django-debug-toolbar
 	django-admin-tools
 	django-piston
 	django-extensions
-	django-registration
 	werkzeug
 	pytz
+	py-bcrypt
+	django-userena
+	
 wsgi = true
