cleaning up the coffeescript and less

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 parts = 
 	django
+	media
 eggs =
 	ipython
 	readline
@@ -28,3 +29,8 @@ eggs =
 	pystache
 	
 wsgi = true
+
+[media]
+recipe = gp.recipe.node
+npms = coffee-script less
+scripts = coffee lessc
