--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,5 +32,6 @@ wsgi = true
 
 [media]
 recipe = gp.recipe.node
-npms = coffee-script less
-scripts = coffee lessc
+url = http://nodejs.org/dist/v0.6.15/node-v0.6.15.tar.gz
+npms = coffee-script less hogan.js
+scripts = coffee cake lessc hulk
