remove oauth from the buildout and django - we don't need it for now

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts = 
 	django
-	media
+	node
 eggs =
 	ipython
 	readline
@@ -23,7 +23,6 @@ eggs =
 	django-admin-tools
 	django-tastypie
 	django-extensions
-	django-oauth-plus
 	oauth2
 	werkzeug
 	pytz
@@ -34,7 +33,7 @@ eggs =
 	
 wsgi = true
 
-[media]
+[node]
 recipe = gp.recipe.node
 url = http://nodejs.org/dist/v0.6.15/node-v0.6.15.tar.gz
 npms = coffee-script less hogan.js
