--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: python
 python:
   - "2.7"
 install:
-  - pip -r requirements-test.txt
+  - pip install -r requirements-test.txt
 script: django-admin test profiles books
