--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "2.7"
+env:
+  - DJANGO_SETTINGS_MODULE=ook.development
 install:
-  - pip install -r requirements-test.txt
+  - pip install -r requirements-test.txt --use-mirrors
 script: django-admin.py test profiles books
