--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
 env:
   - DJANGO_SETTINGS_MODULE=ook.development
+  - PYTHONPATH=$PYTHONPATH:$PWD
 install:
   - pip install -r requirements-test.txt --use-mirrors
 script:
