--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,9 @@ language: python
 python:
   - "2.7"
 env:
-  - DJANGO_SETTINGS_MODULE=ook.development
+  - DJANGO_SETTINGS_MODULE=ook.development;PYTHONPATH='.'
 install:
   - pip install -r requirements-test.txt --use-mirrors
-before_script:
-  - PYTHONPATH=$PYTHONPATH:.
 script:
   - echo $PYTHONPATH
   - django-admin.py test profiles books
