--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
   - "2.7"
 env:
-  - DJANGO_SETTINGS_MODULE=ook.development;PYTHONPATH='.'
+  - PYTHONPATH='.'
 install:
   - pip install -r requirements-test.txt --use-mirrors
 script:
   - echo $PYTHONPATH
-  - django-admin.py test profiles books
+  - django-admin.py test profiles books --settings="ook.development"
