change django settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,11 @@
+*.pyc
+*.komodoproject
 .Python
+.installed.cfg
 /bin/
 /include/
 /lib/
-readline-6.2.1-py2.7-macosx-10.7-intel.egg/
-eggs/
-.installed.cfg
-*.pyc
-*.komodoproject
-*.db
-ook/media/js/ook.js
-ook/media/js/template.js
-ook/media/js/templates.js
-ook/media/css/ook.css
-parts/
-devel.db-journal
+/readline-6.2.1-py2.7-macosx-10.7-intel.egg/
+/eggs/
+/parts/
 /tmp/
