--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,5 +34,5 @@ wsgi = true
 [node]
 recipe = gp.recipe.node
 url = http://nodejs.org/dist/v0.6.15/node-v0.6.15.tar.gz
-npms = coffee-script less hogan.js wrench
-scripts = coffee cake lessc hulk
+npms = coffee-script less wrench
+scripts = coffee cake lessc
