--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ env:
 install:
   - pip install -r requirements-test.txt -q --use-mirrors
   - npm install coffee-script
+  - cake all
 script:
   - django-admin.py test profiles books --settings="ook.development"
